feat: implement person detail vertical
